# novum

./: .gitignore  LICENSE  README.md  compare_postA1A2.txt  compare_postIP40.txt  compare_postcontra.json  compare_postcontra.txt  compare_postdomain.json  compare_postdomain.txt  compare_postinst.json  compare_postinst.txt  compare_postj.json  compare_postj.txt  compare_postov.json  compare_postov.txt  compare_postq.json  compare_postq.txt  compare_postux.json  compare_postux.txt  eval_2026_05_29_postlang.txt  eval_2026_05_30_postA1A2.txt  eval_2026_05_30_postA1A2_q6q8.txt  eval_2026_05_30b.txt  eval_postIP41.txt  eval_postIP42.txt  eval_postIP43.txt  eval_postcontra.txt  eval_postdomain.txt  eval_postinst.txt  eval_postj.txt  eval_postov.txt  eval_postq.txt  eval_postux.txt  eval_run4.txt  eval_run4b.txt  lint_ip27.txt  lint_ip28.txt  phase7_run1.txt  phase7_run2.txt  phase7b_run.txt  (+15 more)
backend/: .env.example  README.md  alembic.ini  cov_ip15.txt  health_pytest.txt  junit_pr11.xml  pyproject.toml  pytest_ev.txt  pytest_ip15.txt  pytest_out.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend/tests/: conftest.py  test_agent_lane_router.py  test_agent_lanes_deep.py  test_agent_lanes_fast.py  test_agent_orchestrator.py  test_agent_orchestrator_cancel_with_complexity.py  test_agent_orchestrator_fast_lane.py  test_agent_orchestrator_redecomposition.py  test_agent_orchestrator_route.py  test_agent_output_payload_persistence.py  test_agent_react_loop.py  test_agent_run_state.py  test_agent_runner.py  (+102 more)
(+637 files in other folders)
